2017-08-15 Gregory L. Lee <lee218@llnl.gov>
	* : added callpath wrapper
	* : dysect dump lightweight core via callpath

2017-06-30 Gregory L. Lee <lee218@llnl.gov>
	* core_file_merger.py : CUDA core file merging added

2017-06-20 Gregory L. Lee <lee218@llnl.gov>
	* : Core file merger updated to use graphlib 3.0 interface
	* : Core file merger add thread count

2017-06-16 Gregory L. Lee <lee218@llnl.gov>
	* : Updated documentation
	* : Fixes to core file merger

2017-06-15 Gregory L. Lee <lee218@llnl.gov>
	* : Major travis build fixes

2017-06-07 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py, STATmain.py : main launcher should allow cl to be run when import of STATview or STATGUI fails

2017-06-05 Gregory L. Lee <lee218@llnl.gov>
	* x_ac_debuglibs.m4 : do not explicitly link in libelf, libdwarf, libiberty

2017-06-01 Gregory L. Lee <lee218@llnl.gov>
	* STATGUI.py : imporoved process listing and filtering

2017-05-18 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py : GUI option to cache app source files

2017-05-17 Gregory L. Lee <lee218@llnl.gov>
	* : Added arg parsing to GUI
	* : Run through STATmain.py with subcommands

2017-05-11 Gregory L. Lee <lee218@llnl.gov>
	* : Enable Python-script-level debugging by default

2017-05-04 Gregory L. Lee <lee218@llnl.gov>
	* : Doc update for Intel MPI
	* STAT_BackEnd.C : Fix frame function name for Python traces

2017-04-11 Gregory L. Lee <lee218@llnl.gov>
	* : Require Python even when GUI disabled

2017-04-10 Gregory L. Lee <lee218@llnl.gov>
	* : build system fixes
	* .travis.yml : travis build fixes

2017-03-30 Gregory L. Lee <lee218@llnl.gov>
	* : tag version 3.0.1
	* x_ac_debuglibs.m4 : Dyninst 9.3 support

2017-03-20 Gregory L. Lee <lee218@llnl.gov>
	* : GUI fixes to handle special characters

2017-03-20 Gregory L. Lee <lee218@llnl.gov>
	* : GUI fixes to handle special characters

2017-03-13 Gregory L. Lee <lee218@llnl.gov>
	* : Build system fixes and script test arg parsing

2017-02-17 Gregory L. Lee <lee218@llnl.gov>