@@ -607,7 +607,7 @@ StatError_t STAT_FrontEnd::launchDaemons()
         for (i = 0; i < daemonArgc; i++)
             printMsg(STAT_LOG_MESSAGE, __FILE__, __LINE__, "daemonArgv[%d] = %s\n", i, daemonArgv[i]);
 
-        if (applicationOption_ == STAT_ATTACH || STAT_CUDA_ATTACH)
+        if (applicationOption_ == STAT_ATTACH || applicationOption_ == STAT_CUDA_ATTACH)
         {
             if (launcherPid_ == 0)
             {
