@@ -1,3 +1,9 @@
+2017-09-15 Gregory L. Lee <lee218@llnl.gov>
+	* STAT_BackEnd.C : improved python function arg creation
+
+2017-09-15 Gregory L. Lee <lee218@llnl.gov>
+	* : added cuda-gdb backend implementation
+
 2017-08-15 Gregory L. Lee <lee218@llnl.gov>
 	* : added callpath wrapper
 	* : dysect dump lightweight core via callpath
